# murder-mystery-game

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-lint.txt  requirements.txt  setup.cfg  setup.py
mystery/: __init__.py  animation.py  characters.py  chat_box.py  door.py  end_screen.py  game.py  intro_screen.py  item.py  judge.py  llm.py  menu.py  npc.py  officer.py  params.py  player.py  room.py  state.py  tutorial_window.py  utils.py  walker.py  world.py
plot/business_of_murder/: game_config.yaml
plot/business_of_murder/images/items/: marble_paperweight.xcf  open_door.xcf  paper_note  victim_segmented.xcf
plot/business_of_murder/images/rooms/: Untitled.xcf  office_hallway.xcf  office_overview.xcf
plot/business_of_murder/prompts/: Clue1.txt  Clue2.txt  Clue3.txt  Clue4.txt  bobby.txt  fiona.txt  harold.txt  louis.txt  margaret.txt  officer.txt  pauline.txt  tim.txt
plot/business_of_murder/prompts/judge/: .0.txt.swp  .1.txt.swo  .1.txt.swp  .2.txt.swp  0.txt  1.txt  2.txt
plot/business_of_murder/prompts/tutorial/: 1.txt  2.txt  3.txt  4.txt  5.txt
