[tool.poetry]
name = "mystery"
version = "0.1.0"
description = ""
authors = ["robandl"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
pygame-gui = "0.6.9"
opencv-python = "^4.11.0.86"
pygame = "^2.6.1"
shapely = "^2.0.6"
python-dotenv = "^1.0.1"
requests-toolbelt = "^1.0.0"
langchain-openai = "^0.3.2"
langchain = "^0.3.16"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
pre-commit = ">=2.15.0"
ruff = "^0.0.291"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I", "N", "W"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
unfixable = ["E501"]

# Same as Black.
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
